Closed
Bug 110620
Opened 24 years ago
Closed 24 years ago
crash in nsAccessibilityService::CreateXULImageAccessible
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: rginda, Assigned: aaronlev)
References
()
Details
(Keywords: crash)
Attachments
(1 file)
|
756 bytes,
patch
|
aaronlev
:
review+
brendan
:
superreview+
|
Details | Diff | Splinter Review |
371 NS_ASSERTION(elt, "No DOM element or node!");
372 PRBool hasTextEquivalent;
373 elt->HasAttribute(...);
Nonfatal assert, followed by a null pointer dereference. This causes Venkman to
crash as soon as the window object is inspected. If this doesn't get fixed on
the branch, every Venkman user will run into this crash.
| Reporter | ||
Comment 1•24 years ago
|
||
| Assignee | ||
Comment 2•24 years ago
|
||
Okay, can someone tell me how this happens?
There should aways be an <image> element for the node when this is called.
| Assignee | ||
Comment 3•24 years ago
|
||
Comment on attachment 58246 [details] [diff] [review]
suggested pach
r=aaronl
Attachment #58246 -
Flags: review+
Comment 4•24 years ago
|
||
Is this needed for 0.9.6? Time is flying.
Why weren't more people cc'd on the bug?
/be
Comment 5•24 years ago
|
||
Comment on attachment 58246 [details] [diff] [review]
suggested pach
Anyone figure out why there is no dom element?
/be
Attachment #58246 -
Flags: superreview+
Comment 6•24 years ago
|
||
It would be nice to have, yes. Is this the correct patch?
| Reporter | ||
Comment 7•24 years ago
|
||
Yes this is important for 0.9.6 for the debugger. I imagine that the dom
element isn't there because this code isn't being reached through the expected
codepath. The debugger is just enumerating properties on the window object, and
this code can't deal.
Sending drivers mail now.
Comment 8•24 years ago
|
||
a=blizzard on behalf of drivers for 0.9.6
Blocks: 104864
Keywords: mozilla0.9.6+
| Reporter | ||
Comment 9•24 years ago
|
||
Checked into branch and trunk.
No longer blocks: 104864
Status: NEW → RESOLVED
Closed: 24 years ago
Keywords: mozilla0.9.6+
Resolution: --- → FIXED
Comment 10•24 years ago
|
||
Still seeing this on win98 2001112003 build.
Crashed when trying to inspect reference to 'this {window:388(?)}' in venkman
debugger.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Reporter | ||
Comment 11•24 years ago
|
||
Closing again. The new issue is bug 112494.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•