bug 110620, r=aaronl, sr=brendan, a=blizzard/drivers add null pointer check to avoid crash when we're called in unexpected ways.